---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"$foo()\")"
---
Ok(Path(PathExpr(
  steps: [
    PostfixExpr(
      primary: VarRef(Name(
        name: "foo",
        prefix: None,
        namespace: None,
      )),
      postfixes: [
        ArgumentList([]),
      ],
    ),
  ],
)))
